baselines/test_basic_no_impls_with_error_ms-101__report_md.txt
Traceback (most recent call last):
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/command.py", line 408, in <module>
    main()
    ~~~~^^
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/command.py", line 381, in main
    command.command_report(report_args=args)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/command.py", line 318, in command_report
    result = report.ReportCommand(
        location=initial_source,
    ...<2 lines>...
        format=format,
    )
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/commands/report/report.py", line 69, in __init__
    self.result = self.__run()
                  ~~~~~~~~~~^^
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/commands/report/report.py", line 82, in __run
    statistics: StatisticsContainer = StatisticsGenerator(
                                      ~~~~~~~~~~~~~~~~~~~^
        initial_location=self.__initial_location, semantic_validator=semantic_validator
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ).result
    ^
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/commands/status/statistics_generator.py", line 46, in __init__
    self.result: StatisticsContainer = self._calculate(self.cid)
                                       ~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/commands/status/statistics_generator.py", line 99, in _calculate
    self._check_implementation(urn_id=urn_id, nr_of_implementations=nr_of_implementations)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jimisola/cloud/dev/clones/github/reqstool/reqstool-client/src/reqstool/commands/status/statistics_generator.py", line 131, in _check_implementation
    raise TypeError(f"Requirement {urn_id} should not have an implementation")
TypeError: Requirement ms-101:REQ_1339 should not have an implementation
